@startuml
'https://plantuml.com/class-diagram
set namespaceSeparator ::

package "org.springframework.data.jpa.repository" <<Frame>> {
    interface JpaRepository {
    }
}

package "pizza.order" <<Frame>> {

    interface CustomizedOrderRepository {
        +findOverdueOrders() : List<Order>
    }
    class CustomizedOrderRepositoryImpl {
    }
    interface OrderRepository {
    }

    OrderRepository -up-|> JpaRepository
    OrderRepository -up-|> CustomizedOrderRepository
    CustomizedOrderRepositoryImpl -up-|> CustomizedOrderRepository
}


@enduml